# networking-tcp-2

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.cpp  main.cpp
network/: CMakeLists.txt
network/include/: getio.h  io.h  tcpclient.h  tcpconnection.h  tcpconstants.h  tcplogging.h  tcpserver.h  tcpstate.h
network/src/: tcpclient.cpp  tcpconnection.cpp  tcplogger.cpp  tcpserver.cpp
server/: CMakeLists.txt
server/include/: server.h
server/src/: main.cpp  server.cpp
